# computer-mechanics-test

./: CMakeLists.txt  Element.cpp  Element.h  Material.cpp  Material.h  Message.cpp  Message.h  TotalNode.cpp  TotalNode.h  elementItem.cpp  elementItem.h  elementeditdialog.cpp  elementeditdialog.h  elementeditdialog.ui  icons.qrc  input.cpp  input.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  method.cpp  method.h  node.cpp  node.h  nodeItem.cpp  nodeItem.h  nodeeditdialog.cpp  nodeeditdialog.h  nodeeditdialog.ui
input/: 1.inp  2.inp  3.inp  4.inp  cm.inp  cm_t.inp
